modified:   apps/api/src/api/rules-settings/dto/create-user-rule-setting.dto.ts 	modified:   apps/api/src/api/rules-settings/dto/rule-setting-response.dto.ts 	modified:   apps/api/src/api/rules-settings/rules-settings.controller.ts 	modified:   apps/user-control-panel/src/features/settings/components/useServiceRuleSettings.ts 	modified:   libs/api-client/openapi.json 	modified:   libs/api-client/src/lib/api-client.ts
