# apps/api/src/api/rules-settings/dto/create-user-rule-setting.dto.ts
@@ -13,7 +13,7 @@ export class CreateUserRuleSettingDto {
   @ApiProperty({ example: 'Rule for spot trading', required: false })
   description?: string;
 
-  @ApiProperty({ enum: ServiceCode, example: ServiceCode.TELEGRAM })
+  @ApiProperty({enum: ServiceCode,enumName: 'ServiceCode',example: ServiceCode.TELEGRAM,})
   serviceCode: ServiceCode;
 
   @ApiProperty({ example: ['crypto', 'binance'], required: false })
